<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    tools:context="com.example.vinilos.ui.main.view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="cursive"
        android:padding="1dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/turquoise"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="155dp"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.289" />

    <LinearLayout
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_image"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/collector_button"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="@string/collector"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/visitor_button"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:text="@string/visitor"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />
</androidx.constraintlayout.widget.ConstraintLayout>