...
    android:layout_height="match_parent"
    android:background="@drawable/base"
    tools:context="com.example.vinilos.ui.main.view.DetailCollectorActivity"
    android:id="@+id/detailAlbum">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VinylsApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ButtonColor"
            app:popupTheme="@style/Theme.VinylsApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
...
